[gd_scene load_steps=28 format=3 uid="uid://b5fe0p7l23hdh"]

[ext_resource type="Script" path="res://Scripts/NewPlayer/RuneWizard.gd" id="1_qxjt6"]
[ext_resource type="PackedScene" uid="uid://0j5wlyiujxdb" path="res://Scenes/HealthComponent.tscn" id="2_wrw1b"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerHealthComponent.gd" id="3_nnwpv"]
[ext_resource type="PackedScene" uid="uid://5rg8wvhftb45" path="res://Scenes/HitboxComponent.tscn" id="4_qbx7p"]
[ext_resource type="Script" path="res://Scripts/Player/Head.gd" id="5_7lc1w"]
[ext_resource type="Shader" path="res://Shaders/pixelshader.gdshader" id="6_c78oi"]
[ext_resource type="Script" path="res://Scripts/UI/ToastPanel.gd" id="7_2st4x"]
[ext_resource type="PackedScene" uid="uid://bxx1nfavgc6oh" path="res://Scenes/UI/player_ui.tscn" id="8_60r6q"]
[ext_resource type="PackedScene" uid="uid://cvvkjjqwg4fxp" path="res://Scenes/UI/pause_menu.tscn" id="9_d27l0"]
[ext_resource type="PackedScene" uid="uid://bwxti633ig2ml" path="res://Scenes/notebook.tscn" id="10_6jjbi"]
[ext_resource type="PackedScene" uid="uid://cokhklsp0ttgb" path="res://Scenes/UI/rune_selection_menu.tscn" id="12_oeivv"]
[ext_resource type="PackedScene" uid="uid://dxylm6kidr8ct" path="res://Scenes/UI/drawing_notebook.tscn" id="13_6rvr1"]
[ext_resource type="PackedScene" uid="uid://fs5ycfuu0hib" path="res://Scenes/UI/rune_wizard_view_model.tscn" id="13_ejhmp"]
[ext_resource type="Script" path="res://Scripts/States/StateMachine.gd" id="13_inqea"]
[ext_resource type="Script" path="res://Scripts/States/NewPlayer/RuneWizardIdle.gd" id="15_yfsyk"]
[ext_resource type="Script" path="res://Scripts/States/NewPlayer/RuneWizardDash.gd" id="17_va4ep"]
[ext_resource type="Script" path="res://Scripts/States/NewPlayer/RuneWizardJumping.gd" id="18_jtkw5"]
[ext_resource type="Script" path="res://Scripts/States/NewPlayer/RuneWizardMoving.gd" id="19_8ck8c"]
[ext_resource type="Script" path="res://Scripts/States/NewPlayer/RuneWizardNotebookOpen.gd" id="20_4wgk5"]
[ext_resource type="Script" path="res://Scripts/States/NewPlayer/RuneWizardEditingRunes.gd" id="21_w6tf8"]
[ext_resource type="Script" path="res://Scripts/States/NewPlayer/RuneWizardGroundPound.gd" id="22_67csh"]
[ext_resource type="Script" path="res://Scripts/RuneManager.gd" id="22_n27p4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xp85v"]
radius = 0.6
height = 2.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8ve0e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hdprr"]
render_priority = 1
shader = ExtResource("6_c78oi")

[sub_resource type="QuadMesh" id="QuadMesh_1p6k0"]
material = SubResource("ShaderMaterial_hdprr")
size = Vector2(2, 2)

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_vcknt"]

[node name="RuneWizard" type="CharacterBody3D" node_paths=PackedStringArray("viewmodel") groups=["player"]]
collision_layer = 2
collision_mask = 69
script = ExtResource("1_qxjt6")
viewmodel = NodePath("Head/Camera3D/SubViewportContainer/SubViewport/RuneWizardViewModel")
S_SPEED = 5.0
S_MAX_SPEED = 5

[node name="HealthComponent" parent="." instance=ExtResource("2_wrw1b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("3_nnwpv")
regen_amount = 0.05
max_health = 20.0

[node name="RegenTimer" type="Timer" parent="HealthComponent"]
wait_time = 3.0
one_shot = true

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_qbx7p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 32
collision_mask = 80
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_xp85v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8ve0e")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66985, 0)
script = ExtResource("5_7lc1w")

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.01)
cull_mask = 1048573
current = true
fov = 90.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.327226)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_1p6k0")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Head/Camera3D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4293918722
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="RuneWizardViewModel" parent="Head/Camera3D/SubViewportContainer/SubViewport" instance=ExtResource("13_ejhmp")]
cull_mask = 2
fov = 90.0

[node name="CanvasLayer" type="CanvasLayer" parent="Head/Camera3D"]
follow_viewport_enabled = true

[node name="ToastPanel" type="Panel" parent="Head/Camera3D/CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.256042
offset_top = -0.200012
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("7_2st4x")

[node name="ToastText" type="RichTextLabel" parent="Head/Camera3D/CanvasLayer/ToastPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="ToastTimer" type="Timer" parent="Head/Camera3D/CanvasLayer/ToastPanel"]
wait_time = 3.0
one_shot = true

[node name="PlayerUI" parent="Head/Camera3D/CanvasLayer" instance=ExtResource("8_60r6q")]

[node name="Menu" type="Container" parent="Head/Camera3D/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" parent="Head/Camera3D/CanvasLayer/Menu" instance=ExtResource("9_d27l0")]
visible = false
layout_mode = 2

[node name="Notebook" parent="Head/Camera3D/CanvasLayer/Menu" instance=ExtResource("10_6jjbi")]
visible = false
layout_mode = 2

[node name="RuneSelectionMenu" parent="Head/Camera3D/CanvasLayer/Menu" instance=ExtResource("12_oeivv")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DrawingNotebook" parent="Head/Camera3D/CanvasLayer" instance=ExtResource("13_6rvr1")]

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 145
collide_with_areas = true

[node name="GPUParticlesCollisionHeightField3D" type="GPUParticlesCollisionHeightField3D" parent="Head"]
size = Vector3(25, 25, 25)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0)
shape = SubResource("SeparationRayShape3D_vcknt")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("13_inqea")
initial_state = NodePath("RuneWizardIdle")

[node name="RuneWizardIdle" type="Node" parent="StateMachine"]
script = ExtResource("15_yfsyk")

[node name="RuneWizardDash" type="Node" parent="StateMachine"]
script = ExtResource("17_va4ep")

[node name="DashTimer" type="Timer" parent="StateMachine/RuneWizardDash"]
wait_time = 0.1
one_shot = true

[node name="RuneWizardJumping" type="Node" parent="StateMachine"]
script = ExtResource("18_jtkw5")

[node name="RuneWizardMoving" type="Node" parent="StateMachine"]
script = ExtResource("19_8ck8c")

[node name="RuneWizardEditingRunes" type="Node" parent="StateMachine" node_paths=PackedStringArray("rune_edit_ui")]
script = ExtResource("21_w6tf8")
rune_edit_ui = NodePath("../../Head/Camera3D/CanvasLayer/Menu/RuneSelectionMenu")

[node name="RuneWizardNotebookOpen" type="Node" parent="StateMachine" node_paths=PackedStringArray("notebook_ui")]
script = ExtResource("20_4wgk5")
notebook_ui = NodePath("../../Head/Camera3D/CanvasLayer/DrawingNotebook")

[node name="RuneWizardGroundPound" type="Node" parent="StateMachine"]
script = ExtResource("22_67csh")

[node name="RuneManager" type="Node" parent="."]
script = ExtResource("22_n27p4")

[connection signal="timeout" from="Head/Camera3D/CanvasLayer/ToastPanel/ToastTimer" to="Head/Camera3D/CanvasLayer/ToastPanel" method="_on_toast_timer_timeout"]
[connection signal="ready" from="Head/Camera3D/CanvasLayer/PlayerUI" to="HealthComponent" method="_on_player_ui_ready"]
[connection signal="timeout" from="StateMachine/RuneWizardDash/DashTimer" to="StateMachine/RuneWizardDash" method="_on_dash_timer_timeout"]
